[package]
name = "urlshortener-cli"
version = "1.2.0"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "A program which makes your url shorten."
keywords = ["url", "short", "shortener", "link", "web"]
license = "MIT"
edition = "2021"
repository = "https://github.com/iddm/urlshortener-cli"
documentation = "https://github.com/iddm/urlshortener-cli"

[dependencies]
urlshortener = "3"
cli-clipboard = "0.4"

[dependencies.notify-rust]
optional = true
version = "4"

[features]
default = ["notifications"]
notifications = ["notify-rust"]
